# hyper-sync

./: Cargo.toml  README.md
assets/: hyper-sync.desktop
config/: layout.toml  runtime.toml
scripts/: build.sh  publish-demo-video.sh
src/: config.rs  install.rs  layout.rs  main.rs  protocol.rs  serial.rs
src/audio/: dynamics.rs  envelope.rs  mod.rs  modulate.rs  monitor.rs  spectrum.rs  state.rs
src/capture/: mod.rs  negotiate.rs  sample.rs  screen.rs  worker.rs
src/daemon/: ipc.rs  mod.rs  state.rs  supervisor.rs
src/effects/: animated.rs  candle.rs  mod.rs  solid.rs  sound_viz.rs
src/tray/: mod.rs
src/tui/: mod.rs
systemd/: hyper-sync.service
